--- a/src/components/Player/Body/Body.css
+++ b/src/components/Player/Body/Body.css
@@ -1,4 +1,8 @@
 .body{
+    padding: 30px;
     border: 1px solid red;
     flex: 0.8;
+    height: 100vh;
+    color: white;
+    background: rgb(91, 87, 115) linear-gradient(transparent, rgba(0, 0, 0, 1));
 }
