--- a/src/components/Player/Sidebar/Sidebar.css
+++ b/src/components/Player/Sidebar/Sidebar.css
@@ -2,4 +2,10 @@
     border: 1px solid black;
     height: 100vh;
     flex: 0.2;
+    color: white;
+    padding-left: 10px;
+    padding-right: 10px;
+    min-width: 230px;
+    height: 100vh;
+    background-color: #040404;
 }
