--- a/src/components/Player/Body/Body.css
+++ b/src/components/Player/Body/Body.css
@@ -5,8 +5,7 @@
     overflow-y: overlay;
     flex: 0.8;
     color: white;
-    background: linear-gradient(transparent, rgba(0, 0, 0, 1));
-    background-color: rgb(91, 87, 115);
+    background: rgb(91, 87, 115) linear-gradient(transparent, rgba(0, 0, 0, 1));
 }
 
 .body::-webkit-scrollbar {
